--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         { name: "Avengers", emoji: "🦸" }
     ];
 
-    const USERS = ["Maddox", "Aaron", "Finley", "Eshna", "Sasha"];
+    const USERS = ["Maddox", "Aaron", "Finley", "Sasha", "Eshna"];
     const USER_ICONS = ["👩‍💻", "👨‍🎨", "👩‍🔬", "👨‍🚀", "👩‍🎤"];
     const USER_COLORS = ["#ff6b6b", "#ffd93d", "#6bcb77", "#4d96ff", "#cc5de8"];
     const MOVIE_COLORS = ["#ff922b", "#20c997", "#845ef7", "#f06595", "#339af0", "#5c7cfa", "#e64980", "#51cf66"];
